<resources>
    <string name="Location_failed">Location failed, please enter your city manually</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="achv_alarm">12:00 am? Do you really think I want to get up at this time?</string>
    <string name="achv_birthday">EMO has prepared a happy birthday song and cake for you. Blow out the candles and make a wish!</string>
    <string name="achv_bullet_time">"\"You're so close, but I'm faster\", EMO said"</string>
    <string name="achv_charge">"EMO's favorite: Electric Burger! Burp~"</string>
    <string name="achv_chess">Breaking news: AI pet EMO by LivingAI defeated all human Lubo players...in one game...</string>
    <string name="achv_cliff">As an experienced explorer, EMO has been in and out of danger time and time again.</string>
    <string name="achv_dance">"Put your hands in the air! Let's dance~"</string>
    <string name="achv_dog">Warning! Warning! Alien creature detected!</string>
    <string name="achv_face">\"Human, non-aggressive, cute but not as cute as me, next one.\"</string>
    <string name="achv_fall">EMO loves to swim on dry land.</string>
    <string name="achv_fashion_icon">With your creative works, EMO is the brightest star.</string>
    <string name="achv_fortune_teller">Let coins tell us the secrets of the future.</string>
    <string name="achv_frighten">Howl~~~ The beast awakens. Are you afraid?</string>
    <string name="achv_light_off">I bring darkness, tremble before me!</string>
    <string name="achv_light_on">Do you yearn for light? Here it is!</string>
    <string name="achv_lucky_duck">Luck is not a superpower? But I like it.</string>
    <string name="achv_music">As a professional connoisseur, EMO is very picky about music.</string>
    <string name="achv_petting">"See EMO's bright forehead? That is the proof of your love for him."</string>
    <string name="achv_photo">Please look at the photographer, smile and say \"E~~MO\"</string>
    <string name="achv_remember">You remembered! Your memory reaches 10 points.</string>
    <string name="achv_rhythmic">All combo! You and EMO did a good job!</string>
    <string name="achv_shaked">Shaken not stirred, the EMO cocktail is born!</string>
    <string name="achv_sleep">Noon is the most suitable for dreaming!</string>
    <string name="achv_time">E.M.O...3.M.O...3.3.O...3:30</string>
    <string name="achv_timer">\"I think you just want to talk to me, not really need a countdown.\" EMO said.</string>
    <string name="achv_unknown">unknown</string>
    <string name="achv_wakeup">EMO will always be with you. You can call him anytime.</string>
    <string name="achv_weather">EMO knows where it is snowing, and he really wants to see it, but don’t get him wet.</string>
    <string name="alarm_des_1">"To set an alarm:
\"EMO\", \"Set an alarm at {7 am} every {Tuesday}.\"
\"EMO\", \"Remind me to {eat} at {8 pm} every {Friday}.\"
\"EMO\", \"Set an alarm for everyday at {10}.\""</string>
    <string name="alarm_des_2">"To check alarms:
\"EMO\", \"Check the alarms.\"
\"EMO\", \"Show me all the alarms.\""</string>
    <string name="alarm_des_3">"To delete alarms:
\"EMO\", \"Remove all the alarms.\"
\"EMO\", \"Remove {first} alarm.\""</string>
    <string name="alarm_des_4">"To turn on/off alarms:
\"EMO\", \"Turn on/off the alarms.\"
\"EMO\", \"Turn on/off {second} alarm.\""</string>
    <string name="app_name">EMO</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_adapter_null_error">Banner setAdapter() 参数不能为空</string>
    <string name="banner_adapter_use_error">你还没有调用 setAdapter() 方法</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bt_cancal">Cancal</string>
    <string name="bt_rename">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_a_song">Please select a track</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="coming_soon">Coming soon</string>
    <string name="confirm">ok</string>
    <string name="connect_emo_to_wifi">CONNECT EMO TO WIFI</string>
    <string name="continues">Continue</string>
    <string name="custom_Setting_Succeeded">Setting succeeded, well done!</string>
    <string name="custom_connect_failed_server">EMO failed to connect to the APP server</string>
    <string name="custom_failed_connect_wifi">EMO is not connected to Wi-Fi</string>
    <string name="custom_failed_eye_color">Failed to set eye color</string>
    <string name="custom_failed_receive_stickers">EMO failed to receive stickers</string>
    <string name="custom_failed_set_stcikers">Failed to set stickers</string>
    <string name="custom_interruped">The current process was interrupted</string>
    <string name="custom_permission_request">Permission request</string>
    <string name="custom_permission_tips">\"EMO Pet\" needs storage permission to load the pictures in the album. Please grant the relevant permission in the settings.</string>
    <string name="custom_set_empty">The content to be set is empty</string>
    <string name="custom_setting_failed">Setting failed, please try again</string>
    <string name="disc_add_music">Please add music</string>
    <string name="disc_time">00:00</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="emo_ary_sure">EMO will power off and the app will lose connection with EMO. Are you sure you want to continue?</string>
    <string name="emo_is_not_ready">EMO is not ready</string>
    <string name="emo_is_not_ready_or_130">"EMO isn't ready or needs to be updated to v1.3.0."</string>
    <string name="emo_power_off_txt">EMO can only power off when he is not on the skateboard.</string>
    <string name="enter_english">Please enter only English letters and spaces</string>
    <string name="enter_wifi_account">Please enter your WiFi account number</string>
    <string name="enter_wifi_password">Please input a password</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="find_emo">FOUND EMO</string>
    <string name="firmware_upgrade">Firmware update</string>
    <string name="game_add_music">Add music</string>
    <string name="gpsNotifyMsg">At present, mobile phone scanning Bluetooth needs to turn on the positioning function。</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_interactive">interaction</string>
    <string name="home_training_plan">Training program</string>
    <string name="home_yule_dance">entertainment</string>
    <string name="hunt_cliff_detected">Cliff detected, please take EMO to a safe place.</string>
    <string name="hunt_fallen_down">EMO has fallen down, please give him a hand.</string>
    <string name="hunt_let_go">"EMO is looking for treasure again, let's go!"</string>
    <string name="hunt_obstacle_detected">Obstacle detected, please help EMO clear the roadblocks.</string>
    <string name="hunt_picked_up">EMO has been picked up. If you want to find treasure, please let him go:)</string>
    <string name="hunt_team_work">"This is a team work, please don't blame EMO."</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="indicator_color_error">指示器的颜色只能设置成“@color/colorID or #000000”</string>
    <string name="indicator_null_error">请先调用setIndicator()方法来设置指示器</string>
    <string name="internet_connection">network connections</string>
    <string name="internet_unconnection">Network not connected</string>
    <string name="is_support_5g_internet">5g network not supported</string>
    <string name="is_suppot_ble">Your device does not support Bluetooth low power version!</string>
    <string name="item_view_role_description">Tab</string>
    <string name="light_des_1">Turn on/off the light.</string>
    <string name="link_now">Connect now</string>
    <string name="login_xiao_mi_accout">登录小米账号</string>
    <string name="many_operations">Too many operations, try again later.</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="setting_inter_string">Set up network</string>
    <string name="xiao_ai">Xiao AI</string>
</resources>