<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_setting_inter" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
        <ImageButton android:id="@id/setup_back_fragment" android:background="@drawable/setup_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:src="@drawable/setup_back" />
        <TextView android:textSize="15.0sp" android:textColor="#ff101521" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_inter_string" android:layout_centerHorizontal="true" fontPath="fonts/Roboto-Bold.ttf" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/account_container" android:layout_width="251.0dip" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" android:layout_centerHorizontal="true">
        <EditText android:id="@id/wifi_account" android:paddingLeft="0.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/enter_wifi_account" android:drawableLeft="@drawable/setup_icon_wifi_gr" android:drawablePadding="15.0dip" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/password_container" android:layout_width="251.0dip" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:layout_below="@id/account_container" android:layout_centerHorizontal="true">
        <EditText android:id="@id/wifi_password" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/enter_wifi_password" android:drawableLeft="@drawable/setup_icon_password" android:drawablePadding="15.0dip" android:inputType="textPassword" />
        <ImageButton android:id="@id/btn_eye" android:background="@drawable/setup_icon_eye" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="12.0sp" android:textColor="#ff777c90" android:layout_width="251.0dip" android:layout_height="wrap_content" android:text="@string/is_support_5g_internet" android:layout_below="@id/password_container" android:layout_centerHorizontal="true" />
    <Button android:textColor="#ffffffff" android:gravity="center_horizontal" android:background="@drawable/home_train_button_preservation_start" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="9.0dip" android:text="@string/confirm" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>